--- a/travel.html
+++ b/travel.html
@@ -49,7 +49,6 @@
             <p class="text-gray-600 dark:text-gray-300 mb-3">
                 Emerald cliffs, hidden waterfalls, and turquoise coves. Hiking Waimea Canyon and cruising along the Nā Pali Coast were pure magic.
             </p>
-            <span class="inline-block text-indigo-600 dark:text-indigo-300 group-hover:underline">Read trip notes →</span>
             </div>
         </a>
         </article>
@@ -64,7 +63,6 @@
             <p class="text-gray-600 dark:text-gray-300 mb-3">
                 CDMX’s vibrant art & street food paired with Guanajuato’s colorful alleys and hillside views.
             </p>
-            <span class="inline-block text-indigo-600 dark:text-indigo-300 group-hover:underline">Read trip notes →</span>
             </div>
         </a>
         </article>
@@ -78,7 +76,6 @@
             <p class="text-gray-600 dark:text-gray-300 mb-3">
                 Geysers, rainbow pools, and wide-open valleys—America’s original national park in all its geothermal glory.
             </p>
-            <span class="inline-block text-indigo-600 dark:text-indigo-300 group-hover:underline">Read trip notes →</span>
             </div>
         </a>
         </article>
@@ -92,7 +89,6 @@
             <p class="text-gray-600 dark:text-gray-300 mb-3">
                 Patriotic parades, limited-time treats, and the fireworks show that lights up the castle.
             </p>
-            <span class="inline-block text-indigo-600 dark:text-indigo-300 group-hover:underline">Read trip notes →</span>
             </div>
         </a>
         </article>
@@ -100,13 +96,12 @@
         <!-- Entry: Las Vegas -->
         <article class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden">
         <a href="travel/las-vegas.html" class="block group">
-            <img src="assets/las-vegas.jpg" alt="Las Vegas Strip at night" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
+            <img src="assets/travel/las-vegas/las-vegas-cover.jpeg" alt="Las Vegas Strip at night" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
             <div class="p-6">
             <h2 class="text-2xl font-semibold mb-2">Las Vegas 🎰</h2>
             <p class="text-gray-600 dark:text-gray-300 mb-3">
                 Neon nights, shows, and late-night eats—plus a quick escape to Red Rock for desert views.
             </p>
-            <span class="inline-block text-indigo-600 dark:text-indigo-300 group-hover:underline">Read trip notes →</span>
             </div>
         </a>
         </article>
@@ -114,13 +109,12 @@
         <!-- Entry: Qatar World Cup -->
         <article class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden">
         <a href="travel/qatar-world-cup.html" class="block group">
-            <img src="assets/qatar-world-cup.jpg" alt="Qatar World Cup stadium" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
+            <img src="assets/travel/qatar/qatar-cover.jpeg" alt="Qatar World Cup stadium" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
             <div class="p-6">
             <h2 class="text-2xl font-semibold mb-2">Qatar World Cup ⚽</h2>
             <p class="text-gray-600 dark:text-gray-300 mb-3">
                 Electric stadium atmospheres, global fans, and unforgettable matches on football’s biggest stage.
             </p>
-            <span class="inline-block text-indigo-600 dark:text-indigo-300 group-hover:underline">Read trip notes →</span>
             </div>
         </a>
         </article>
@@ -128,13 +122,12 @@
         <!-- Entry: Big Island, Hawaii -->
         <article class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden">
         <a href="travel/hawaii-big-island.html" class="block group">
-            <img src="assets/hawaii-big-island.jpg" alt="Hawaii Big Island lava fields and coastline" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
+            <img src="assets/travel/big-island/big-island-cover.jpeg" alt="Hawaii Big Island lava fields and coastline" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
             <div class="p-6">
             <h2 class="text-2xl font-semibold mb-2">Big Island, Hawaii 🌋</h2>
             <p class="text-gray-600 dark:text-gray-300 mb-3">
                 Volcanoes National Park, black sand beaches, and stargazing near Mauna Kea.
             </p>
-            <span class="inline-block text-indigo-600 dark:text-indigo-300 group-hover:underline">Read trip notes →</span>
             </div>
         </a>
         </article>
@@ -142,13 +135,12 @@
         <!-- Entry: Oʻahu, Hawaii -->
         <article class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden">
         <a href="travel/hawaii-oahu.html" class="block group">
-            <img src="assets/hawaii-oahu.jpg" alt="Oʻahu coastline and Diamond Head" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
+            <img src="assets/travel/oahu/oahu-cover.jpeg" alt="Oʻahu coastline and Diamond Head" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
             <div class="p-6">
             <h2 class="text-2xl font-semibold mb-2">Oʻahu, Hawaii 🏄‍♂️</h2>
             <p class="text-gray-600 dark:text-gray-300 mb-3">
                 Diamond Head hikes, North Shore waves, and poke bowls on repeat—Aloha vibes everywhere.
             </p>
-            <span class="inline-block text-indigo-600 dark:text-indigo-300 group-hover:underline">Read trip notes →</span>
             </div>
         </a>
         </article>
@@ -156,13 +148,12 @@
         <!-- Entry: Tokyo -->
         <article class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden">
         <a href="travel/tokyo.html" class="block group">
-            <img src="assets/tokyo.jpg" alt="Tokyo cityscape" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
+            <img src="assets/travel/tokyo/tokyo-cover.jpeg" alt="Tokyo cityscape" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
             <div class="p-6">
             <h2 class="text-2xl font-semibold mb-2">Tokyo 🇯🇵</h2>
             <p class="text-gray-600 dark:text-gray-300 mb-3">
                 Neon nights, ramen runs, tranquil shrines, and the perfect mix of future and tradition.
             </p>
-            <span class="inline-block text-indigo-600 dark:text-indigo-300 group-hover:underline">Read trip notes →</span>
             </div>
         </a>
         </article>
@@ -170,13 +161,12 @@
         <!-- Entry: Osaka / Kyoto / Nara / Ine -->
         <article class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden">
         <a href="travel/kansai-osaka-kyoto-nara-ine.html" class="block group">
-            <img src="assets/kansai.jpg" alt="Kansai region: Osaka, Kyoto, Nara, Ine" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
+            <img src="assets/travel/kansei/kansei-cover.jpeg" alt="Kansai region: Osaka, Kyoto, Nara, Ine" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
             <div class="p-6">
-            <h2 class="text-2xl font-semibold mb-2">Osaka / Kyoto / Nara / Ine 🇯🇵</h2>
+            <h2 class="text-2xl font-semibold mb-2">Kansei Region 🇯🇵</h2>
             <p class="text-gray-600 dark:text-gray-300 mb-3">
                 Street food in Osaka, temples in Kyoto, deer in Nara, and boathouses in Ine—Kansai highlights.
             </p>
-            <span class="inline-block text-indigo-600 dark:text-indigo-300 group-hover:underline">Read trip notes →</span>
             </div>
         </a>
         </article>
