Update travel layout

--- a/travel.html
+++ b/travel.html
@@ -43,7 +43,7 @@
         <!-- Entry: Kauaʻi, Hawaii -->
         <article class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden">
         <a href="travel/hawaii_kauai.html" class="block group">
-            <img src="assets/travel/kauai/kauai-cover.jpeg" alt="Kauaʻi, Hawaii – Na Pali Coast" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
+            <img src="assets/travel/kauai/kauai-cover.jpeg" alt="Kauaʻi, Hawaii – Na Pali Coast" class="w-full h-[40rem] object-cover group-hover:scale-105 transition-transform duration-300">
             <div class="p-6">
             <h2 class="text-2xl font-semibold mb-2">Kauaʻi, Hawaii 🌴</h2>
             <p class="text-gray-600 dark:text-gray-300 mb-3">
@@ -57,7 +57,7 @@
         <!-- Entry: Mexico City & Guanajuato -->
         <article class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden">
         <a href="travel/mexico.html" class="block group">
-            <img src="assets/travel/mexico/mexico-cover.jpeg" alt="Mexico City and Guanajuato, Mexico" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
+            <img src="assets/travel/mexico/mexico-cover.jpeg" alt="Mexico City and Guanajuato, Mexico" class="w-full h-[40rem] object-cover group-hover:scale-105 transition-transform duration-300">
             <div class="p-6">
             <h2 class="text-2xl font-semibold mb-2">Mexico City & Guanajuato 🇲🇽</h2>
             <p class="text-gray-600 dark:text-gray-300 mb-3">
@@ -70,7 +70,7 @@
         <!-- Entry: Yellowstone National Park -->
         <article class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden">
         <a href="travel/yellowstone.html" class="block group">
-            <img src="assets/travel/yellowstone/yellowstone-cover.jpeg" alt="Yellowstone National Park" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
+            <img src="assets/travel/yellowstone/yellowstone-cover.jpeg" alt="Yellowstone National Park" class="w-full h-[40rem] object-cover group-hover:scale-105 transition-transform duration-300">
             <div class="p-6">
             <h2 class="text-2xl font-semibold mb-2">Yellowstone National Park 🦬</h2>
             <p class="text-gray-600 dark:text-gray-300 mb-3">
@@ -83,7 +83,7 @@
         <!-- Entry: Disneyland on Fourth of July -->
         <article class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden">
         <a href="travel/disneyland-july4.html" class="block group">
-            <img src="assets/travel/disneyland/disneyland-cover.jpeg" alt="Disneyland on Fourth of July" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
+            <img src="assets/travel/disneyland/disneyland-cover.jpeg" alt="Disneyland on Fourth of July" class="w-full h-[40rem] object-cover group-hover:scale-105 transition-transform duration-300">
             <div class="p-6">
             <h2 class="text-2xl font-semibold mb-2">Disneyland — July 4th 🎆</h2>
             <p class="text-gray-600 dark:text-gray-300 mb-3">
@@ -96,7 +96,7 @@
         <!-- Entry: Las Vegas -->
         <article class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden">
         <a href="travel/las-vegas.html" class="block group">
-            <img src="assets/travel/las-vegas/las-vegas-cover.jpeg" alt="Las Vegas Strip at night" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
+            <img src="assets/travel/las-vegas/las-vegas-cover.jpeg" alt="Las Vegas Strip at night" class="w-full h-[40rem] object-cover group-hover:scale-105 transition-transform duration-300">
             <div class="p-6">
             <h2 class="text-2xl font-semibold mb-2">Las Vegas 🎰</h2>
             <p class="text-gray-600 dark:text-gray-300 mb-3">
@@ -109,7 +109,7 @@
         <!-- Entry: Qatar World Cup -->
         <article class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden">
         <a href="travel/qatar-world-cup.html" class="block group">
-            <img src="assets/travel/qatar/qatar-cover.jpeg" alt="Qatar World Cup stadium" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
+            <img src="assets/travel/qatar/qatar-cover.jpeg" alt="Qatar World Cup stadium" class="w-full h-[40rem] object-cover group-hover:scale-105 transition-transform duration-300">
             <div class="p-6">
             <h2 class="text-2xl font-semibold mb-2">Qatar World Cup ⚽</h2>
             <p class="text-gray-600 dark:text-gray-300 mb-3">
@@ -122,7 +122,7 @@
         <!-- Entry: Big Island, Hawaii -->
         <article class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden">
         <a href="travel/hawaii-big-island.html" class="block group">
-            <img src="assets/travel/big-island/big-island-cover.jpeg" alt="Hawaii Big Island lava fields and coastline" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
+            <img src="assets/travel/big-island/big-island-cover.jpeg" alt="Hawaii Big Island lava fields and coastline" class="w-full h-[40rem] object-cover group-hover:scale-105 transition-transform duration-300">
             <div class="p-6">
             <h2 class="text-2xl font-semibold mb-2">Big Island, Hawaii 🌋</h2>
             <p class="text-gray-600 dark:text-gray-300 mb-3">
@@ -135,7 +135,7 @@
         <!-- Entry: Oʻahu, Hawaii -->
         <article class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden">
         <a href="travel/hawaii-oahu.html" class="block group">
-            <img src="assets/travel/oahu/oahu-cover.jpeg" alt="Oʻahu coastline and Diamond Head" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
+            <img src="assets/travel/oahu/oahu-cover.jpeg" alt="Oʻahu coastline and Diamond Head" class="w-full h-[40rem] object-cover group-hover:scale-105 transition-transform duration-300">
             <div class="p-6">
             <h2 class="text-2xl font-semibold mb-2">Oʻahu, Hawaii 🏄‍♂️</h2>
             <p class="text-gray-600 dark:text-gray-300 mb-3">
@@ -148,7 +148,7 @@
         <!-- Entry: Tokyo -->
         <article class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden">
         <a href="travel/tokyo.html" class="block group">
-            <img src="assets/travel/tokyo/tokyo-cover.jpeg" alt="Tokyo cityscape" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
+            <img src="assets/travel/tokyo/tokyo-cover.jpeg" alt="Tokyo cityscape" class="w-full h-[40rem] object-cover group-hover:scale-105 transition-transform duration-300">
             <div class="p-6">
             <h2 class="text-2xl font-semibold mb-2">Tokyo 🇯🇵</h2>
             <p class="text-gray-600 dark:text-gray-300 mb-3">
@@ -161,7 +161,7 @@
         <!-- Entry: Osaka / Kyoto / Nara / Ine -->
         <article class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden">
         <a href="travel/kansai-osaka-kyoto-nara-ine.html" class="block group">
-            <img src="assets/travel/kansei/kansei-cover.jpeg" alt="Kansai region: Osaka, Kyoto, Nara, Ine" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
+            <img src="assets/travel/kansei/kansei-cover.jpeg" alt="Kansai region: Osaka, Kyoto, Nara, Ine" class="w-full h-[40rem] object-cover group-hover:scale-105 transition-transform duration-300">
             <div class="p-6">
             <h2 class="text-2xl font-semibold mb-2">Kansei Region 🇯🇵</h2>
             <p class="text-gray-600 dark:text-gray-300 mb-3">
